--- a/css/singolo1.css
+++ b/css/singolo1.css
@@ -4,14 +4,9 @@ margin-right: auto;
 margin-left: auto;
 }
 
-.logo {
-    display: inline;
-    color: white;
-    text-transform: uppercase;
-}
-
-#asterisk {
-    color: red;
+.logo-header {
+  background-image: url( "../assets/Header.png");
+  margin-bottom: -12px;
 }
 
 a {
@@ -20,6 +15,10 @@ a {
 
 .top-menu {
     display: inline;
+    position: absolute;
+    margin-top: 40px;
+    margin-left: 450px;
+    color: white;
 }
 
 .top-menu a {
@@ -32,6 +31,10 @@ a:hover {
 
 div nav {
     display: inline;
+}
+
+.slider {
+    margin-top: -5px;
 }
 
 .slider img {
