--- a/css/style.css
+++ b/css/style.css
@@ -12,3 +12,299 @@ a {
 body {
   min-width: 1020px;
 }
+
+.top {
+  height: 95px;
+  box-sizing: border-box;
+  border-bottom: 6px solid #323746;
+  background-color: #2d303a;  
+}
+
+.wrapper {
+  max-width: 1020px;
+  padding: 0 40px;
+  margin: 0 auto;
+  box-sizing: border-box;
+}
+
+.top .wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  height: 100%;  
+}
+
+.logo-icon {
+  font-size: 25px;
+  letter-spacing: -0.7px;
+}
+
+.logo-icon:after {
+  content: "*";
+  color: #f06c64;
+}
+
+.navigation {
+  display: flex;
+  padding-top: 11px;
+  font-size: 12px;
+  line-height: 12px;
+  font-weight: bold; 
+}
+
+.navigation-item {
+  position: relative;
+  height: 30px;
+  margin-left: 28px;
+  margin-top: 18px;
+}
+
+.navigation-item:not(:last-child):after {
+  position: absolute;
+  right: -15px;
+  content: "\00B7"; 
+  color: #494e62;
+}
+
+.navigation-item a:hover {
+  color: #f06c64;
+}
+
+.section-slider {
+  height: 600px;
+  box-sizing: border-box;
+  border-bottom: 5px solid #ea676b;
+  background-color: #f06c64;  
+}
+
+.slider {
+  position: relative;
+}
+
+.left-arrow{
+  position: absolute;
+  top: 285px;
+  cursor: pointer;
+}
+
+.vertical-Phone {
+  position: absolute;
+  left: 70px;
+  top: -16px;
+}
+
+.horizontal-Pnone {
+  position: relative;
+  left: 320px;
+  top: 70px;
+}
+
+.right-arrow {
+  position: absolute;
+  top: 283px;
+  right: 0px;
+  cursor: pointer;
+}
+
+.section-services {
+  height: 501px;
+  padding-top: 62px;
+  box-sizing: border-box;
+  border-bottom: 6px solid #ffffff;
+  padding-bottom: 48px;
+  color: #666d89;
+  background-color: #f2f2f2;  
+}
+
+.header-services {
+  padding-bottom: 11px;
+  line-height: 30px;
+  }
+
+.header-services-title {
+  padding-bottom: 21px;
+  font-size: 30px; 
+  font-weight: 900;
+  color: #666d89;
+}
+
+.header-services-description {
+  font-size: 18px;
+  font-weight: 300;
+  color: #767e9e;
+}
+
+.services-items {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  column-gap: 20px;
+  row-gap: 20px;
+  padding-top: 36px;
+}
+
+.services-item {
+  position: relative;
+  overflow: hidden;
+  padding-left: 80px;
+  height: 103px;
+}
+
+.services-ellipse-border {
+  position: absolute;
+  left: 0;
+  width: 59px;
+  height: 59px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  box-sizing: border-box;
+  border: 2px solid #666D89;
+  border-radius: 29px; 
+}
+
+.services-item-title {
+  display: block;
+  padding-bottom: 7px;
+  line-height: 18px;
+  font-size: 18px;  
+  font-weight: 900;
+}
+
+.services-item-description {
+  display: block;
+  line-height: 22px;
+  font-size: 12px; 
+  text-align: justify;
+  color: #767e9e;  
+}
+
+.portfolio {
+  padding-bottom: 67px;
+  border-bottom: 6px solid #323746;
+  background-color: #2d303a;  
+}
+
+.section {
+  padding-top: 62px;
+}
+
+.section-header {
+  padding-bottom: 11px;
+  line-height: 30px;
+}
+
+.section-title {
+  padding-bottom: 21px;
+  font-size: 30px;  
+  font-weight: 900;
+  color: #666d89;
+}
+
+.section-description {
+  font-size: 18px;
+  font-weight: 300;
+  color: #767e9e;
+}
+
+.portfolio-filter {
+  display: flex;
+}
+
+.filter-input-button {
+  margin-right: 10px;
+  border: 1px solid rgb(100, 110, 140);
+  border-radius: 5px;
+  line-height: 18px;
+  font-size: 12px;
+  color: #767e9e; 
+  cursor: pointer;
+  background-color: transparent;  
+}
+
+.filter-input-button:hover {
+  background-color: #ffff;
+  color: rgb(100, 110, 140);
+  border-color: #ffff;
+}
+
+.filter-selected-input {
+  border-color: rgb(200, 200, 200);
+  color: #ffff;
+}
+
+.portfolio-items {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr;
+  gap: 20px; 
+  overflow: hidden;
+  margin-top: 19px;
+}
+
+.portfolio-image {
+  display: block;
+}
+
+.about-us {
+  padding-bottom: 67px;
+  border-bottom: 6px solid #ffffff;
+  background-color: #f2f2f2;
+}
+
+.persons {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 20px;
+  padding: 0;
+  margin-top: 34px;
+}
+
+.person {
+  height: 443px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  color: #666d89;  
+}
+
+.person-image {
+  width: 300px;
+  height: 300px;
+}
+
+.person-name {
+  height: 18px;
+  padding-top: 6px;
+  overflow: hidden;
+  font-size: 18px;
+  line-height: 18px;
+  font-weight: 900;  
+}
+
+.person-description {
+  padding-bottom: 13px;
+  font-size: 12px;
+  line-height: 22px;
+  color: #767e9e;  
+}
+
+.social-media-icons {
+  display: flex;
+}
+
+.social-media-icon {
+  width: 32px;
+  height: 32px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  box-sizing: border-box;
+  margin-right: 8px;
+  border: 1px solid #666d89;
+  border-radius: 29px; 
+}
+
+.social-media-icon:hover {
+  background-color: #ffff;
+}
+
