--- a/css/style.css
+++ b/css/style.css
@@ -112,26 +112,7 @@ body {
   box-sizing: border-box;
   border-bottom: 6px solid #ffffff;
   padding-bottom: 48px;
-  color: #666d89;
   background-color: #f2f2f2;  
-}
-
-.header-services {
-  padding-bottom: 11px;
-  line-height: 30px;
-  }
-
-.header-services-title {
-  padding-bottom: 21px;
-  font-size: 30px; 
-  font-weight: 900;
-  color: #666d89;
-}
-
-.header-services-description {
-  font-size: 18px;
-  font-weight: 300;
-  color: #767e9e;
 }
 
 .services-items {
@@ -168,6 +149,7 @@ body {
   line-height: 18px;
   font-size: 18px;  
   font-weight: 900;
+  color: #666d89;
 }
 
 .services-item-description {
@@ -175,7 +157,7 @@ body {
   line-height: 22px;
   font-size: 12px; 
   text-align: justify;
-  color: #767e9e;  
+  color: #767e9e;   
 }
 
 .portfolio {
@@ -188,6 +170,10 @@ body {
   padding-top: 62px;
 }
 
+.title-color {
+  color: #666d89;
+}
+
 .section-header {
   padding-bottom: 11px;
   line-height: 30px;
@@ -197,12 +183,14 @@ body {
   padding-bottom: 21px;
   font-size: 30px;  
   font-weight: 900;
-  color: #666d89;
 }
 
 .section-description {
   font-size: 18px;
   font-weight: 300;
+}
+
+.description-color {
   color: #767e9e;
 }
 
@@ -264,7 +252,6 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  color: #666d89;  
 }
 
 .person-image {
@@ -278,7 +265,8 @@ body {
   overflow: hidden;
   font-size: 18px;
   line-height: 18px;
-  font-weight: 900;  
+  font-weight: 900;
+  color: #666d89;    
 }
 
 .person-description {
@@ -308,3 +296,158 @@ body {
   background-color: #ffff;
 }
 
+.quote {
+  padding-bottom: 13px;
+  background-color: #f06c64;
+  border-bottom: 6px solid #ea676b; 
+}
+
+.quote-header-text-color {
+  color:#f0d8d9;
+}
+
+.quote-form-section {
+  margin-top: 33px;
+}
+
+.centering {
+  display: flex;
+  justify-content: space-between;
+  flex-shrink: 0;
+}
+
+.quote-form {
+  display: flex;
+  flex-direction: column;
+  width: 620px;
+}
+
+.input-text {
+  height: 38px;
+  max-width: 100%;
+  min-width: 100%;
+  margin-bottom: 16px;
+  padding-left: 15px;
+  box-sizing: border-box;
+  outline: none;
+  resize: none;
+  border: none;
+  border-radius: 4px;
+  background-color: #d6564f; 
+  font-size: 12px;
+  line-height: 12px;
+  color: #f48c8f; 
+  transition: background-color .27s ease-out,
+  box-shadow 0.27s ease-out; 
+}
+
+.input-text:hover {
+  background-color: #bd4c46;
+  box-shadow: 0px 0px 7px -1px rgba(0,0,0,0.39);
+}
+
+.input-text:focus {
+  background-color: #ffffff;
+  box-shadow: 0px 0px 7px -1px rgba(0,0,0,0.39);
+  color: #000000;
+}
+
+.input-text.details {
+  height: 202px;
+  padding-top: 12px;
+}
+
+.input-text::placeholder {
+  color: #f48c8f;
+}
+
+.submit-button {
+  height: 38px;
+  width: 100px;
+  outline: none;
+  border: none;
+  background-color: #d6564f;
+  border-radius: 4px;
+  cursor: pointer;
+  font-weight: bold;
+  text-transform: uppercase;
+  color: #f0d8d9;
+  transition: background-color .27s ease-out, box-shadow 0.27s ease-out;
+}
+
+.submit-button:hover {
+  background-color: #bd4c46;
+  box-shadow: 0px 0px 7px -1px rgba(0,0,0,0.39);
+}
+
+.contact-information {
+  width: 300px;
+  color: #f0d8d9;
+}
+
+.contact-information-header {
+  margin-bottom: 10px;
+  font-size: 18px;
+  font-weight: 900;
+  line-height: 18px;  
+}
+
+.contact-information-description {
+  margin-bottom: 29px;
+  font-size: 12px;
+  line-height: 22px;  
+}
+
+.contact {
+  position: relative;
+  display: block;
+  margin-bottom: 9.5px;
+  padding-left: 23px;
+  font-size: 12px;
+  line-height: 12px;  
+  color: #f0d8d9;
+  text-decoration: none;
+}
+
+.contact::before {
+  position: absolute;
+  left: 0;
+  width: 13px;
+  height: 12px;
+  display: block;
+  content: "";  
+  background-repeat: no-repeat;
+}
+
+.location:before {
+  background-image: url("../assets/location.png");
+  background-size: 7px;
+  background-position: 3px;
+}
+
+.contact-tel:before {
+  background-image: url("../assets/phone-icon.png");
+  background-size: 11px;
+  background-position: 1px;
+}
+
+.contact-email:before {
+  background-image: url("../assets/mail.png");
+  background-size: 13px;
+  background-position: 1px;
+}
+
+.bottom {
+  height: 76px;
+  background-color: #2d303a;  
+}
+
+.copyright {
+  margin-top: 32px;
+  font-size: 12px;
+  color: #666d89;
+}
+
+.footer-social-media-icons {
+  margin-top: 20px;
+}
