--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,10 @@ body {
 }
 
 .top {
+  position:fixed;
+  width: 100%;
   height: 95px;
+  z-index:1;  
   box-sizing: border-box;
   border-bottom: 6px solid #323746;
   background-color: #2d303a;  
@@ -66,12 +69,14 @@ body {
   color: #494e62;
 }
 
-.navigation-item a:hover {
+.navigation-item-link:hover,
+.navigation-item-link-selected
+ {
   color: #f06c64;
 }
 
 .section-slider {
-  height: 600px;
+  height: 695px;
   box-sizing: border-box;
   border-bottom: 5px solid #ea676b;
   background-color: #f06c64;  
@@ -83,25 +88,25 @@ body {
 
 .left-arrow{
   position: absolute;
-  top: 285px;
+  top: 375px;
   cursor: pointer;
 }
 
 .vertical-Phone {
   position: absolute;
   left: 70px;
-  top: -16px;
+  top: 79px;
 }
 
 .horizontal-Pnone {
   position: relative;
   left: 320px;
-  top: 70px;
+  top: 165px;
 }
 
 .right-arrow {
   position: absolute;
-  top: 283px;
+  top: 378px;
   right: 0px;
   cursor: pointer;
 }
