--- a/css/style.css
+++ b/css/style.css
@@ -546,3 +546,59 @@ body {
 .footer-social-media-icons {
   margin-top: 20px;
 }
+
+.pop-up {
+  position: relative;
+  z-index: -1;  
+  opacity: 0; 
+  transition: opacity 0.3s ease-out,
+              z-index 0.3s step-end;
+}
+
+.pop-up-open {
+  z-index: 1; 
+  opacity: 1; 
+  transition: opacity 0.3s ease-out,
+              z-index 0.3s step-start;
+}
+
+.blocker {
+  position: fixed;
+  left: 0;
+  top: 0;
+  z-index: 1000; 
+  width: 100%;
+  height: 100%; 
+  background-color: rgba(255, 255, 255, 0.8);
+  backdrop-filter: blur(10px);
+}
+
+.pop-up-form {
+  position: fixed;
+  z-index: 1001;
+  left: 50%;
+  top: 50%;
+  padding: 40px; 
+  transform: translate(-50%, -50%);
+  background-color: #ffffff;
+  box-shadow: 0px 0px 7px -1px rgba(0,0,0,0.39);
+  border-radius: 5px;
+}
+
+.pop-up-text {
+  margin-bottom: 10px;
+}
+
+.pop-up-close {
+  height: 38px;  
+  width: 100%; 
+  padding: 5px;   
+  text-transform: uppercase;
+  color: black;
+  font-weight: bold;  
+  border: none;
+  background: greenyellow;
+  border-radius: 5px;
+  outline: none;
+  cursor: pointer;
+}
