--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
-﻿* {
+﻿
+* {
   margin: 0;
   font-family: "Lato", sans-serif;
 }
@@ -322,10 +323,9 @@ body {
 
 .portfolio-image {
   display: block;
-  width: 220px;
-  height: 187px;
-  box-sizing: border-box;  
-  cursor: pointer;   
+  width: 100%;
+  box-sizing: border-box;
+  cursor: pointer;
 }
 
 .about-us {
@@ -350,8 +350,9 @@ body {
 }
 
 .person-image {
-  width: 300px;
-  height: 300px;
+  width: 100%;
+  display: block;
+  margin-bottom: 20px;
 }
 
 .person-name {
@@ -612,3 +613,31 @@ body {
   outline: none;
   cursor: pointer;
 }
+
+@media only screen and (max-width: 1019px) {
+  .wrapper.slider {
+  padding: 0 5%;
+  }
+
+  .wrapper {
+  padding: 0 30px;
+  }
+
+  .section-services {
+  height: 501px;
+  padding-top: 62px; 
+  box-sizing: content-box;    
+  border-bottom: 6px solid #ffffff;     
+  background-color: #f2f2f2;
+  }  
+
+  .services-items {
+  grid-template-columns: 1fr 1fr;
+  }  
+
+  .portfolio-items {
+  grid-template-columns: 1fr 1fr 1fr;
+  }
+}
+  
+    
