--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,4 @@
-﻿
-* {
+﻿* {
   margin: 0;
   font-family: "Lato", sans-serif;
 }
@@ -11,8 +10,7 @@ a {
 }
 
 body {
-  min-width: 1020px;
-  --header-height: 95px;
+  min-width: var(--min-width);  
 }
 
 :target::before {
@@ -25,6 +23,7 @@ body {
 
 .top {
   position:fixed;
+  top: 0;
   width: 100%;
   height: var( --header-height);
   z-index:1;  
@@ -59,7 +58,7 @@ body {
 
 .navigation {
   display: flex;
-  padding-top: 11px;
+  padding: 0;
   font-size: 12px;
   line-height: 12px;
   font-weight: bold; 
@@ -76,7 +75,7 @@ body {
   position: absolute;
   right: -15px;
   content: "\00B7"; 
-  color: #494e62;
+  color: #ffffff;
 }
 
 .navigation-item-link:hover,
@@ -86,8 +85,18 @@ body {
 }
 
 .section-slider {
-  height: calc(600px + var(--header-height));
-  box-sizing: border-box; 
+  position: relative;
+  z-index: 0;
+  padding-top: var(--header-height);
+  box-sizing: border-box;    
+}
+
+.section-slider .wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding-top: 21px;
+  padding-bottom: 23px;
 }
 
 .section-slider-red {
@@ -100,18 +109,17 @@ body {
   border-bottom: 5px solid #5C85EF; 
 }
 
-.slider {
-  position: relative;
-}
-
 .slider-button {
   width: 16px;
   height: 27px;
+  padding: 0;
   border: none;
   border-radius: 3px;
   outline: none;
+  background-repeat: no-repeat;
   background: none;
   transition: filter 0.3s ease-out, transform 0.3s ease-out;
+  cursor: pointer;
 }
 
 .slider-button:hover {
@@ -119,80 +127,109 @@ body {
   transform: scale(1.5);
 }
 
-.previous-button{
-  position: absolute;
-  top: calc(285px + var(--header-height));
-  background-image: url("../assets/chevleft.png");
-  cursor: pointer;
+.previous-button{  
+  background-image: url("../assets/chevleft.png");  
+}
+
+.slides {
+  position: relative;
+  width: 80vw;
+  height: 55vw;
+  max-width: 800px;
+  max-height: 550px;
+  display: flex;
+  overflow: hidden;  
 }
 
 .slide {
-  display: none;
-  height: 500px;  
+  position: absolute;
+  z-index: 1;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;  
   opacity: 0;
+  transition: 0.5s step-end;
 }
 
 .slide-selected {
-  display: flex;
-  justify-content: space-between;
-  align-items: center; 
+  position: absolute;
+  left: 0;
+  z-index: 2;
   opacity: 1;
+  transition: 0.5s step-start;
 }
 
 .phone {
+  position: relative;
+  flex-shrink: 0;
   background-repeat: no-repeat;
 }
 
 .vertical-phone {
-  position: absolute;
-  left: 70px;
-  top: calc(-16px + var(--header-height) * 1.7);
-  width: 240px;
-  height: 483px;
-  padding-right: 20px;
-  background-image: url("../assets/phone-vertical.svg"),
-                    url("../assets/phone-vertical-shadow.png");
-                  
+  z-index: 2;
+  width: 30%;
+  height: 88%;                  
 }
 
-.vertical-phone-display {
+.vertical-phone .phone-body {
+  width: 90%;
+}
+
+.phone-body {
   position: absolute;
-  top: 13.5%;
-  left: 14px;
+  z-index: 2;
+  left: 0;
+  top: 0;
+}
+
+.vertical-phone .phone-display {
+  left: 5.83%;
+  top: 13.46%;
+  width: 78.33%;
+}
+
+.phone-display {
+  position: absolute;
+  z-index: 3;  
+}
+
+.phone-shadow {
+  position: absolute;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
 }
 
 .horizontal-phone {
-  position: relative;
-  left: 370px;
-  top: calc(70px + var(--header-height) * 0.75);
-  width: 483px;
-  height: 240px; 
-  background-image: url("../assets/phone-horizontal.svg"),
-                    url("../assets/phone-horizontal-shadow.png");
+  z-index: 1;
+  width: 60.38%;
+  height: 43.64%;
 }
 
-.horizontal-phone-display {
-  position: absolute;
-  top: 14px;
-  left: 12.5%;
+.horizontal-phone .phone-body {
+  width: 94.82%;
 }
 
-.turn-off .display {
+.horizontal-phone .phone-display {
+  left: 12.42%;
+  top: 5.83%;
+  width: 68.94%;
+}
+
+.turn-off .phone-display {
   opacity: 0;
 }
 
 .slide2-img {
-  position: absolute;
-  top: calc(var(--header-height) * 1.5);
-  left: 22%;
+  height: 80%;
 }
 
 .next-button {
-  position: absolute;
-  top: calc(283px + var(--header-height));
-  right: 0px;
-  background-image: url("../assets/chevright.png");
-  cursor: pointer;
+  background-image: url("../assets/chevright.png");  
 }
 
 .section-services {
@@ -615,7 +652,7 @@ body {
 }
 
 @media only screen and (max-width: 1019px) {
-  .wrapper.slider {
+  .wrapper .slider {
   padding: 0 5%;
   }
 
@@ -623,12 +660,9 @@ body {
   padding: 0 30px;
   }
 
-  .section-services {
-  height: 501px;
-  padding-top: 62px; 
+  .section-services { 
   box-sizing: content-box;    
-  border-bottom: 6px solid #ffffff;     
-  background-color: #f2f2f2;
+  
   }  
 
   .services-items {
@@ -639,5 +673,3 @@ body {
   grid-template-columns: 1fr 1fr 1fr;
   }
 }
-  
-    
