--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,12 @@
-﻿* {
+﻿
+:root {
+  --header-height-default-big: 95px;
+  --header-height-default-small: 60px;  
+  --header-height: var(--header-height-default-big);
+  --min-width: 320px;
+}
+
+* {
   margin: 0;
   font-family: "Lato", sans-serif;
 }
@@ -46,6 +54,26 @@ body {
   height: 100%;  
 }
 
+.navigation-burger {
+  display: none;
+  outline: none;  
+  cursor: pointer;
+  width: 25px;
+  height: 20px;
+  background-color: transparent;
+  border: none;
+  padding: 0;
+  background-image: url("../assets/burger-button.svg");
+  transition: transform .27s ease-in-out;
+
+  position: relative;
+  z-index: 1;
+}
+
+.navigation-burger-display {
+  transform: rotate(90deg);
+}
+
 .logo-icon {
   font-size: 25px;
   letter-spacing: -0.7px;
@@ -54,6 +82,10 @@ body {
 .logo-icon:after {
   content: "*";
   color: #f06c64;
+}
+
+.navigation-shadow {
+  display: none;
 }
 
 .navigation {
@@ -233,7 +265,6 @@ body {
 }
 
 .section-services {
-  height: 501px;
   padding-top: 62px;
   box-sizing: border-box;
   border-bottom: 6px solid #ffffff;
@@ -245,15 +276,20 @@ body {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   column-gap: 20px;
-  row-gap: 20px;
+  gap: 20px;
+  padding: 0;
   padding-top: 36px;
 }
 
 .services-item {
   position: relative;
+  max-height: 200px;
+  min-height: 60px;
+  box-sizing: border-box;
   overflow: hidden;
-  padding-left: 80px;
-  height: 103px;
+  padding-left: 80px;  
+  margin-right: 20px;
+  margin-bottom: 20px;  
 }
 
 .services-ellipse-border {
@@ -349,7 +385,6 @@ body {
 .portfolio-items {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
-  grid-template-rows: 1fr 1fr 1fr;
   gap: 20px; 
   margin-top: 19px; 
 }
@@ -380,7 +415,6 @@ body {
 }
 
 .person {
-  height: 443px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -440,7 +474,10 @@ body {
 }
 
 .quote-form-section {
-  margin-top: 33px;
+  display: grid;
+  grid-template-columns: 2fr 1fr;
+  gap: 20px;
+  padding-top: 33px;    
 }
 
 .centering {
@@ -452,8 +489,7 @@ body {
 .quote-form {
   display: flex;
   flex-direction: column;
-  width: 620px;
-}
+ }
 
 .input-text {
   height: 38px;
@@ -514,7 +550,6 @@ body {
 }
 
 .contact-information {
-  width: 300px;
   color: #f0d8d9;
 }
 
@@ -575,14 +610,16 @@ body {
   background-color: #2d303a;  
 }
 
-.copyright {
-  margin-top: 32px;
-  font-size: 12px;
-  color: #666d89;
-}
-
-.footer-social-media-icons {
-  margin-top: 20px;
+.bottom-wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-shrink: 0;
+  height: 100%;
+  font-weight: 900;
+  font-size: 13px;
+  line-height: 18px;
+  color: #666D89;  
 }
 
 .pop-up {
@@ -672,4 +709,149 @@ body {
   .portfolio-items {
   grid-template-columns: 1fr 1fr 1fr;
   }
+}
+
+@media only screen and (max-width: 767px) {
+  :root {
+    --header-height-default-big: 71px;
+    --header-height-default-small: 55px;
+  }
+
+  .wrapper {
+    padding: 0 10px;
+  }
+
+  .top .wrapper {
+    justify-content: center;
+  }
+
+  .navigation-burger {
+    display: block;
+    position: absolute;
+    left: 20px;
+  }
+
+  .logo-icon {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 1;
+
+    transition: left .27s ease-in-out, transform .27s ease-in-out;
+  }
+
+  .logo-icon-burger {
+    left: 70px;
+    transform: translate(0, -50%);
+  }
+
+  .navigation-shadow {
+    display: block;
+    width: 100vw;
+    height: 100vh;
+    background: #2D303A;
+    position: absolute;
+    z-index: 0;
+    top: 0;
+    opacity: 0;
+    left: -100%;
+    transition: opacity .27s ease-in-out, left .27s step-end;
+  }
+
+  .navigation-shadow-display {
+    opacity: 0.6;
+    left: 0;
+    transition: opacity .27s ease-in-out, left .27s step-start;
+  }
+
+  .navigation {
+    opacity: 0;
+    position: absolute;
+    z-index: 0;
+    padding-left: 70px;
+    min-height: 320px;    
+    width: 278px;
+    left: calc(-75vw - 5px);
+    box-sizing: border-box;
+    position: fixed;
+    top: 0;
+    height: 100vh;
+    flex-direction: column;
+    justify-content: center;
+    background-color: #000000;    
+    background-color: rgba(45, 48, 58); 
+    transition: left .27s ease-in-out,
+    opacity .27s step-end;
+    box-shadow: 0px 1px 3px 0px rgba(0,0,0,0.5);
+  }
+  
+  .navigation-display {
+    left: 0;
+    opacity: 1;    
+    transition: left .27s ease-in-out, opacity .27s step-start;
+  }
+
+  .navigation-item {
+    margin: 0 0 25px;
+  }
+
+  .navigation-item:not(:last-child)::after {
+    display: none;
+  }
+
+  .navigation-item-link {
+    font-size: 24px;
+    line-height: 29px;
+  }
+
+  .slider-button {
+    width: 14px;
+    height: 25px;
+  }
+
+  .services-items {
+    grid-template-columns: 1fr;
+    padding-top: 20px;
+  }  
+
+  .portfolio-items { 
+    grid-template-columns: 1fr 1fr;
+    gap: 14px;
+  }
+
+  .portfolio-item:nth-child(n+9) {
+    display: none;
+  }
+
+  .persons {
+    grid-template-columns: 1fr;
+    gap: 50px;
+    padding-top: 20px;
+  }  
+
+  .quote {
+    padding: 0;
+  }
+
+  .section {
+    padding: 30px 20px;
+  } 
+
+  .quote-form-section {  
+    grid-template-columns: 1fr;
+    padding-top: 20px;
+  }
+
+  .submit-button {
+    width: 100%;
+  }
+
+  .bottom .wrapper {
+    justify-content: center;
+  }
+
+  .copyright {
+    display: none;
+  }  
 }
